--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,10 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  get: ^4.3.8
+  url_launcher: ^6.0.9
   responsive_grid: ^2.0.0
+
   flutter:
     sdk: flutter
 
@@ -23,8 +26,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  assets:
-    - lib/assets/images/
+  #assets:
+  #  - lib/assets/images/
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
